dev-k8s.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: communicator-dev
  name: communicator-users-service
  labels:
    purpose: dev
    app: communicator-users-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: communicator-users-service

  template:
    metadata:
      labels:
        app: communicator-users-service

    spec:
      serviceAccountName: communicator-users-service
      containers:
        - name: communicator-users-service
          image: communicator-users-service
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  namespace: communicator-dev
  name: communicator-users-service
  labels:
    app: communicator-users-service
    service: communicator-users-service
  annotations:
    ingress.kubernetes.io/service-upstream: "true"
spec:
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
      name: http
  selector:
    app: communicator-users-service

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: communicator-users-service-ingress
  namespace: communicator-dev
  annotations:
    konghq.com/plugins: jwt,communicator-dev-cors
    konghq.com/strip-path: "true"
    konghq.com/preserve-host: "false"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /users-service
            pathType: ImplementationSpecific
            backend:
              service:
                name: communicator-users-service
                port:
                  number: 4000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: communicator-dev
  name: communicator-users-service
spec:
  hosts:
    - communicator-users-service
  http:
    - route:
        - destination:
            host: communicator-users-service
      # retries:
      #   attempts: 3
      #   perTryTimeout: 2s
      #   retryOn: connect-failure,refused-stream,503
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  namespace: communicator-dev
  name: communicator-users-service
spec:
  host: communicator-users-service
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-path-from-outside
  namespace: communicator-dev
spec:
  selector:
    matchLabels:
      app: communicator-users-service
  action: DENY
  rules:
    - from:
        - source:
            notPrincipals:
              - "cluster.local/ns/communicator-dev/sa/communicator-auth-hooks-service"
      to:
        - operation:
            paths: ["/users/create/account"]
